# jenkins_dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.streamlit/: config.toml  secrets.toml.example
specs/001-jenkins-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-jenkins-dashboard/checklists/: requirements.md
specs/001-jenkins-dashboard/contracts/: internal-api.md  jenkins-api-usage.md
src/: __init__.py  app.py
src/components/: __init__.py  job_card.py  job_table.py  status_bar.py
src/components/admin/: __init__.py  audit_viewer.py  user_management.py
src/data/: allowed_users.json
src/models/: __init__.py  audit.py  exceptions.py  job.py  state.py  user.py  whitelist.py
src/pages/: Admin.py
src/services/: __init__.py  audit.py  auth.py  dashboard.py  jenkins.py  mock_auth.py  mock_jenkins.py  mock_ldap.py  whitelist.py
tests/: __init__.py  conftest.py
tests/integration/: test_auth_integration.py  test_jenkins_integration.py
tests/unit/: test_audit.py  test_auth.py  test_components.py  test_dashboard_service.py  test_jenkins_service.py  test_models.py
